client2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client2-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client2
  template:
    metadata:
      labels:
        app: client2
    spec:
      containers:
        - name: client2
          image: water0641/k8s-client2-test
---
apiVersion: v1
kind: Service
metadata:
  name: client2-srv
spec:
  selector:
    app: client2
  ports:
    - name: client2
      protocol: TCP
      port: 3001
      targetPort: 3001
