client3-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client3-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client3
  template:
    metadata:
      labels:
        app: client3
    spec:
      containers:
        - name: client3
          image: 135487423365.dkr.ecr.ap-northeast-2.amazonaws.com/client2:210731-2213
---
apiVersion: v1
kind: Service
metadata:
  name: client3-srv
spec:
  selector:
    app: client3
  ports:
    - name: client3
      protocol: TCP
      port: 3002
      targetPort: 3002
